upgrade component alignment fixed

--- a/projects/store-lite/src/app/presentation/shared/image-text/image-text.component.scss
+++ b/projects/store-lite/src/app/presentation/shared/image-text/image-text.component.scss
@@ -1,4 +1,9 @@
-.graphicClass {
+::ng-deep .graphicClass {
   max-width: 93px;
   max-height: 105px;
+}
+
+::ng-deep .adjustIcon {
+  margin-top: -20px;
+  margin-bottom: 20px;
 }
